--- a/analise_exploratoria/eda.ipynb
+++ b/analise_exploratoria/eda.ipynb
@@ -3149,7 +3149,7 @@
    "id": "14b2884c-7fd8-460e-83e2-afd5a988befd",
    "metadata": {},
    "source": [
-    "## Has there been inflation in the price of products over time? If so, how much did this inflation vary in % and in R$?"
+    "## Has there been inflation in the price of products over time?"
    ]
   },
   {
@@ -3447,7 +3447,7 @@
     "    )\n",
     "\n",
     "    plt.xlabel(\"Date\")\n",
-    "    plt.ylabel(\"Mean Price\")\n",
+    "    plt.ylabel(\"Mean Price (R$)\")\n",
     "    plt.grid(True)\n",
     "    plt.xticks(rotation=30, ha=\"right\")\n",
     "    plt.legend()\n",
